trunk/Archive2/ae/7ec980a7249ee5/output
main.cpp: In function 'int main()':
main.cpp:15:19: error: 'asdfasdfasdf' was not declared in this scope
     asdfasdfasdf(a);
                   ^
