trunk/Archive2/ae/7ec980a7249ee5/main.cpp
#include <iostream>
#include <string>
#include <vector>

struct A { void foo(){std::cout << "foo";} };
/*
template <class T>
void fun (T t) {t.fuzz();}

template <class T>
void fun (T t) {t.foo();}
*/
int main () {
    A a;
    asdfasdfasdf(a);
}
